# qemu-libretro

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile.libretro-gitlab  README.md  configure  libretro-gitlab-build.sh  meson.build  meson_options.txt  qemu-options.hx  qemu_libretro.info
audio/: audio.c  audio_template.h
backends/: meson.build
block/: file-posix.c
chardev/: meson.build
gdbstub/: meson.build
hw/arm/: boot.c
hw/cris/: boot.c
hw/i386/: x86-common.c
hw/rx/: rx-gdbsim.c
monitor/: hmp-target.c
plugins/: meson.build
qapi/: audio.json  ui.json
scripts/: libretro-prefix-target-lib.py  meson-buildoptions.sh
softmmu/: vl.c
stubs/: bdrv-next-monitor-owned.c  blk-commit-all.c  blk-exp-close-all.c  blockdev-close-all-bdrv-states.c  change-state-handler.c  cmos.c  cpu-get-clock.c  cpu-synchronize-state.c  cpus-virtual-clock.c  dump.c  error-printf.c  fdset.c  fw_cfg.c  gdbstub.c  get-vm-name.c  graph-lock.c  hotplug-stubs.c  icount.c  io_uring.c  iothread-lock-block.c  iothread-lock.c  is-daemonized.c  linux-aio.c  meson.build  migr-blocker.c  monitor-core.c  monitor-internal.c  physmem.c  qdev.c  qemu-timer-notify-cb.c  qmp-command-available.c  qmp-quit.c  qtest.c  ram-block.c  replay-mode.c  replay-tools.c  replay.c  runstate-check.c  sysbus.c  target-get-monitor-def.c  (+7 more)
subprojects/: dtc.wrap  glib.wrap  libffi.wrap  proxy-libintl.wrap
system/: runstate.c  vl.c
tcg/: meson.build  region.c
ui/: console.c  egl-helpers.c  libretro.c  meson.build
util/: error-report.c  meson.build  qemu-thread-posix.c  qemu-thread-win32.c  rcu.c
(+7 files in other folders)
